fix : Change DB

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 PORT=8080
-DB_HOST="localhost"
-DB_USER="root"
-DB_PASSWORD=""
-DB_DATABASE="go_books"
-DB_PORT="3306"
+DB_CONNECTION="postgresql://go_books_owner:H1irVFjD7mnK@ep-billowing-sunset-a1l2se8f.ap-southeast-1.aws.neon.tech/go_books?sslmode=require"
